# btgame

bt/src/data/font/.svn/: dir-wcprops  entries
bt/src/data/font/.svn/wcprops/: Vera.ttf.svn-work
bt/src/data/tiles/.svn/: dir-wcprops  entries
bt/src/data/tiles/.svn/wcprops/: stock1.bmp.svn-work  stock2.bmp.svn-work  stock3.bmp.svn-work  stock4.bmp.svn-work  stock5.bmp.svn-work  tile1.bmp.svn-work  tile2.bmp.svn-work  tile3.bmp.svn-work  tile4.bmp.svn-work  tile5.bmp.svn-work  tile6.bmp.svn-work
bt/src/rotozoom/.svn/: dir-wcprops  entries
bt/src/rotozoom/.svn/wcprops/: SDL_rotozoom.c.svn-work  SDL_rotozoom.h.svn-work
neo3d/: .README.swp  AUTHORS  BUGS  ChangeLog  Makefile.am  Makefile.in  config.status  configure  configure.in  n3dViewer.cxx  test.cxx  test.n3d
neo3d/autom4te.cache/: output.0  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
neo3d/blender/: export-neo.py
neo3d/neo3d/: Makefile.am  Makefile.in  audio.cxx  audio.h  audioStack.cxx  audioStack.h  blobeffect.cxx  blobeffect.h  camera.cxx  camera.h  drawobject.h  n3dloader.cxx  n3dloader.h  neo3d.cxx  neo3d.h  nullmesh.cxx  nullmesh.h  object.cxx  object.h  textureStack.cxx  textureStack.h  trimesh.cxx  trimesh.h  trimeshTexture.cxx  trimeshTexture.h
neo3d/neo3d/geo3d/: Makefile  Makefile.am  Makefile.in  geo3d.s
